# sgx-membench

sgx-membench/: Cargo.toml  run.bash
sgx-membench-enclave/: Cargo.toml  build.sh
sgx-membench/src/: main.rs
