[package]
name = "sgx-membench-enclave"
version = "0.1.0"
authors = ["Peter Pietzuch <prp@imperial.ac.uk>"]

[lib]
crate-type = ["dylib"]

[dependencies]
sgx-isa = "0.1.0"
enclave = {version = "=0.1.3", features = ["allocator"] } # was: debug
sgx-membench = { path = "../sgx-membench/" }
core_io = { version = "0.1", features = ["alloc","collections"] }
